# vsmaptools-nuikta-actions

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements.txt  vsmaptools.py
.github/workflows/: nuitka_build.yml
img/icons/: macos.icns
img/icons/macos.iconset/: icon_16x16.argb  icon_32x32.argb
